--- a/src/common/components/navbar/navbar.html
+++ b/src/common/components/navbar/navbar.html
@@ -1,8 +1,8 @@
 <nav class="common-navbar">
   <div class="logo">
-    <h1><a ui-sref="home">{{ vm.name }}</a></h1>
+    <h1><a ui-sref="test">{{ vm.name }}</a></h1>
   </div>
   <div class="nav-links">
-    <span><a ui-sref="about">about</a></span>
+    <span><a ui-sref="test.about">about</a></span>
   </div>
 </nav>
