--- a/generator/component/temp.html
+++ b/generator/component/temp.html
@@ -1,3 +1,6 @@
-<div>
+<div class="<%= dotedFullName %>">
   <h1>{{ vm.name }}</h1>
+  <section>
+    <%= cFullName %> component.
+  </section>
 </div>
