publish is complete; relative content url is enabled; fixed @include of relative stylus doc. PROBLEMS: don't remove entries from sourcemap, just replace; flatten process.env; set base url to server; test bundle under mvc app.

--- a/src/bundles/test/components/navbar/navbar.html
+++ b/src/bundles/test/components/navbar/navbar.html
@@ -1,4 +1,4 @@
-<nav class="common-navbar">
+<nav class="test-navbar">
   <div class="logo">
     <h1><a ui-sref="test">{{ vm.name }}</a></h1>
   </div>
