--- a/src/bundles/test/components/navbar/navbar.styl
+++ b/src/bundles/test/components/navbar/navbar.styl
@@ -1,6 +1,6 @@
-@import '../../common.mixins'
+@import '../../test.mixins'
 
-.common-navbar
+.test-navbar
   height 6.5rem
   background-color $primaryColor
   padding 1rem
