fixed naming of sourcemaps; when published breakpoints don't work well regardless of debug vs release - TBI.

--- a/src/bundles/test/components/about/about.html
+++ b/src/bundles/test/components/about/about.html
@@ -1,6 +1,8 @@
 <div class="test-about">
   <h1>{{ vm.name }}</h1>
   <section>
-    testAbout component.
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi magna lacus, gravida ut eros ut, feugiat congue est. Sed eros nibh, luctus in purus et, hendrerit ornare est. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nullam non urna diam. Maecenas aliquet arcu et leo suscipit ornare. Quisque interdum nisi sodales lorem laoreet, vitae semper arcu eleifend. Aliquam at diam aliquam, congue arcu quis, iaculis lectus. Praesent laoreet neque vel diam rhoncus, nec laoreet arcu tristique. Nunc nisi nisl, tempus nec lacus id, auctor porttitor leo. Aenean venenatis aliquet arcu, eget porttitor diam euismod id. Nunc et faucibus dui. Donec varius arcu nec lectus placerat egestas. Phasellus enim nibh, malesuada a orci sit amet, consectetur molestie mi. Ut interdum eleifend lectus, a sagittis neque congue vel. Praesent egestas scelerisque hendrerit.
+    <p></p>
+    Donec accumsan scelerisque nisi ultricies eleifend. Proin et ultricies est. Suspendisse ornare nisi in ligula finibus accumsan. Nunc lacus nisi, porta et purus at, posuere auctor ex. Etiam tempor odio non ipsum euismod auctor. Sed consectetur enim odio, nec tincidunt metus tincidunt eu. Sed condimentum porta ante, at fringilla libero blandit in.
   </section>
 </div>
