--- a/src/bundles/test/components/about/about.styl
+++ b/src/bundles/test/components/about/about.styl
@@ -1,4 +1,4 @@
-//DEBUG: @import 'common/common.mixins'
+//DEBUG: works now @import 'common/common.mixins'
 @import '../../test.mixins'
 .test-about
   color red
