--- a/src/bundles/test/components/navbar/navbar.styl
+++ b/src/bundles/test/components/navbar/navbar.styl
@@ -1,7 +1,7 @@
-@import '../../test.mixins'
+@import 'common/common.mixins'
 
 .test-navbar
-  height 6.5rem
+  height 1.5rem
   background-color $primaryColor
   padding 1rem
   .nav-links
