--- a/generator/component/temp.html
+++ b/generator/component/temp.html
@@ -1,6 +1,13 @@
-<div class="<%= dotedFullName %>">
+<div class="<%= lispFullName %>">
   <h1>{{ vm.name }}</h1>
   <section>
-    <%= cFullName %> component.
+    <%= dotedCamelCapFullName %> component.
+  </section>
+  <section>
+    webpack is a module bundler.
+    webpack takes modules with dependencies and generates static assets representing those modules.
   </section>
 </div>
+
+
+
