--- a/generator/component/temp.styl
+++ b/generator/component/temp.styl
@@ -1,3 +1,4 @@
-//TBI(webpack or configuratio fails to load deeply nested styles): @import '<%= bundleRelativeRoot %><%= bundleName %>.mixins'
-.<%= dushedFullName %>
-  color red
+@import '<%= bundleRootRelativePath %><%= lispName %>.mixins'
+
+.<%= lispFullName %>
+  color: blue
