component generator is done.

--- a/generator/component/temp.styl
+++ b/generator/component/temp.styl
@@ -1,4 +1,4 @@
-@import '<%= bundleRootRelativePath %><%= lispName %>.mixins'
+@import '<%= bundleRootRelativePath %><%= lispBundleName %>.mixins'
 
 .<%= lispFullName %>
   color: blue
