README.md update; better initial bundle structure with home state;

--- a/src/bundles/test/components/navbar/navbar.html
+++ b/src/bundles/test/components/navbar/navbar.html
@@ -1,6 +1,6 @@
 <nav class="test-navbar">
   <div class="logo">
-    <h1><a ui-sref="test">{{ vm.name }}</a></h1>
+    <h1><a ui-sref="test.home">{{ vm.name }}</a></h1>
   </div>
   <div class="nav-links">
     <span><a ui-sref="test.about">about</a></span>
