implemented support for application prefix

--- a/generator/bundle/temp.styl
+++ b/generator/bundle/temp.styl
@@ -1,6 +1,6 @@
 @import '<%= bundleRootRelativePath %><%= lispName %>.mixins'
 
-.<%= lispFullName %>
+.<%= lispAppPrefix %><%= lispFullName %>
   height 100%
   background-color grayscale(128,128,128)
   .header
