--- a/generator/component/temp.html
+++ b/generator/component/temp.html
@@ -1,4 +1,4 @@
-<div class="<%= lispFullName %>">
+<div class="<%= lispAppPrefix %><%= lispFullName %>">
   <h1>{{ vm.name }}</h1>
   <section>
     <%= dotedCamelCapFullName %> component.
