--- a/generator/component/temp.styl
+++ b/generator/component/temp.styl
@@ -1,4 +1,4 @@
 @import '<%= bundleRootRelativePath %><%= lispBundleName %>.mixins'
 
-.<%= lispFullName %>
+.<%= lispAppPrefix %><%= lispFullName %>
   color: blue
