improved bundle and component generators

--- a/generator/bundle/temp.styl
+++ b/generator/bundle/temp.styl
@@ -1,11 +1,12 @@
 @import '<%= bundleRootRelativePath %><%= lispName %>.mixins'
 
-.<%= lispAppPrefix %><%= lispFullName %>
-  height 100%
-  background-color grayscale(128,128,128)
-  .header
-	  background-color #B6D6E0
-  .footer
-    background-color #E6D4CF
-  .content
-	  background-color white
+// Example [REMOVE]
+// .<%= lispAppPrefix %><%= lispFullName %>
+//   height 100%
+//   background-color grayscale(128,128,128)
+//   .header
+// 	  background-color #B6D6E0
+//   .footer
+//     background-color #E6D4CF
+//   .content
+// 	  background-color white
