--- a/generator/component/temp.styl
+++ b/generator/component/temp.styl
@@ -1,4 +1,5 @@
 @import '<%= bundleRootRelativePath %><%= lispBundleName %>.mixins'
 
-.<%= lispAppPrefix %><%= lispFullName %>
-  color: blue
+// Example [REMOVE]
+// .<%= lispAppPrefix %><%= lispFullName %>
+//   color: blue
