--- a/generator/bundle/temp.mixins.styl
+++ b/generator/bundle/temp.mixins.styl
@@ -1,4 +1,4 @@
 @import '../../common/common.mixins'
-//the same as @import 'common/common.mixins.styl'
 
-$darkTextColor = #212121
+// Example: [REMOVE]
+// $darkTextColor = #212121
