improved generators; fixed build system path case sensitivity issue.

--- a/generator/component/temp.html
+++ b/generator/component/temp.html
@@ -1,5 +1,5 @@
 <div class="<%= lispAppPrefix %><%= lispFullName %>">
-  <h1>{{ vm.name }}</h1>
+  <h1><%= dotedCamelCapFullName %></h1>
   <section>
     <%= dotedCamelCapFullName %> component.
   </section>
